# softrenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Todo.md
include/: Camera.h  Color.h  LRDMath.h  MVP.h  Model.h  Picture.h  Transform.h  const.h
src/: MVP.cpp  Model.cpp  Picture.cpp  main.cpp
test/: Eigen_test.cpp  MVP_test.cpp  obj_loader.cpp  pic_test.cpp
